--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <div class="container">
     <section class="hero-image">
       <h1 class="heading">Егор Савкин</h1>
-      <p>Бедный студент педагогического института</p>
+      <p>Бедный студент педагогического института иностранных языков</p>
     </section>
 
     <section class="intro">
